ui changes for filtered cars with color

--- a/WebContent/modules/Slots/Views/slots-view.html
+++ b/WebContent/modules/Slots/Views/slots-view.html
@@ -25,7 +25,7 @@
             <div ng-repeat="list in ui.filteredCars track by $index">
                 <div class="card">
                     <div class="chip">
-                        <b>{{list.regno}}</b>
+                        <b>{{list.regno}} are parked at slot : {{list.slot}}</b>
                     </div>
                 </div>
             </div>
