--- a/WebContent/modules/Slots/Views/slots-view.html
+++ b/WebContent/modules/Slots/Views/slots-view.html
@@ -1,34 +1,86 @@
 <div class="container">
-    <h3>Slots Here</h3>
-    <div class="col-xs-6 col-sm-6 col-md-2 col-lg-10">
+    <h4>Total Cars Parked: <b>{{ui.cars.length}}</b></h4>
+    <h4>Empty Slots : <b>{{100 - ui.cars.length}}</b></h4>
+    <div class="col-xs-6 col-sm-6 col-md-2 col-lg-6">
         <div class="parking-slot-area" ng-repeat="car in ui.cars track by $index">
             <div class="card">
-                <div class="chip">
+                <div class="chip" ng-if="car.regno!==null && car.slot!==null">
                     <i class="fa fa-car" ng-style="{'color':car.color}"></i>
                     <b>{{car.regno}}</b>
-                    <i class="fa fa-window-close" style="color: #FFF"></i>
+                    <i class="fa fa-window-close" ng-click="depart(ui.cars,$index)" style="color: #FFF"></i>
+                </div>
+                <div ng-if="car.regno==null && car.slot==null">
+                    <h4 class="text-center">Slot Available</h4>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <div class="form-group col-lg-3">
-        <label>Select Car Color:</label>
-        <select class="form-control" ng-model="searchCriteria.colorId" class="mr-r15" ng-change="fetchCarByColor(searchCriteria.colorId)">
-            <option ng-repeat="x in ui.colors" ng-value="{{x.id}}">{{x.color}}</option>
-        </select>
+    <div class="col-lg-3">
+        <h4><b>Incoming car details:</b></h4>
+        <form ng-submit="registerCar(registrationCriteria,$event)">
+            <div class="form-group">
+                <label>Enter Reg.No</label>
+                <input type="text" class="form-control" ng-model="registrationCriteria.regno" required />
+            </div>
+            <div class="form-group">
+                <label>Enter Color</label>
+                <input type="text" class="form-control" ng-model="registrationCriteria.color" required />
+            </div>
+            <div class="form-group">
+                <input class="btn btn-primary" type="submit" />
+            </div>
+        </form>
+        <div ng-if="ui.registeredMsg" class="alert alert-info alert-dismissible">
+            <a href="" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <b>Your car has been parked into slot {{ui.newSlotAllocated}}</b>
+        </div>
+        <form ng-submit="findCar(findCarCriteria.regNum)">
+            <div class="form-group">
+                <label>Find My Car:</label>
+                <input type="text" class="form-control" placeholder="Enter Reg No" ng-model="findCarCriteria.regNum" required />
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" />
+            </div>
+        </form>
+        <div ng-if="ui.slotNum.length>0" class="alert alert-info alert-dismissible">
+            <a href="" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            Your Car is parked in slot : <strong>{{ui.slotNum}}</strong>
+        </div>
     </div>
-    <div class="container col-lg-9" ng-if="ui.filteredCars.length>0">
-        <p>Total number of cars with selected color are : {{ui.filteredCars.length}}</p>
-        <div class="filtered-cars-widget">
-            <div ng-repeat="list in ui.filteredCars track by $index">
+    <div class="container col-lg-3">
+        <h4><b>Filter Car Criteria :</b></h4>
+        <div class="form-group">
+            <label>Select Car Color:</label>
+            <select class="form-control" ng-model="searchCriteria.colorId" class="mr-r15" ng-change="fetchCarByColor(ui.cars,searchCriteria.colorId)">
+                <option ng-repeat="x in ui.colors" ng-value="{{x.id}}">{{x.color}}</option>
+            </select>
+        </div>
+        <div class="" ng-if="ui.filteredCars.length>0">
+            <p>Total cars with selected color are : <b>{{ui.filteredCars.length}}</b></p>
+            <!-- <div class="filtered-cars-widget">
+            <div ng-repeat="list in ui.filteredCars track by $index">            
                 <div class="card">
                     <div class="chip">
-                        <b>{{list.regno}} are parked at slot : {{list.slot}}</b>
+                        <b>{{list.regno}} are parked at slot : {{list.slot}}</b>                        
                     </div>
                 </div>
             </div>
+        </div> -->
+            <table class="filtered-cars-table">
+                <thead>
+                    <tr>
+                        <th>Reg.No</th>
+                        <th>Parked Slot</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="list in ui.filteredCars track by $index">
+                        <td>{{list.regno}}</td>
+                        <td>{{list.slot}}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
