--- a/WebContent/modules/styles/styles.css
+++ b/WebContent/modules/styles/styles.css
@@ -18,9 +18,9 @@ i.fa {
 
 .parking-slot-area {
     margin: 5px 0;
-    border: 1px solid lightgray;
+    border: 1px solid #b6d8b6;
     padding: 5px;
-    width: 225px;
+    width: 220px;
 }
 
 .filtered-cars-widget {
@@ -63,7 +63,32 @@ i.fa {
     background-color: #dddddd;
 }
 
-.filtered-cars-table tbody>tr>td:last-child, thead tr>th:last-child {
+.filtered-cars-table tbody>tr>td:last-child,
+thead tr>th:last-child {
     text-align: right;
     padding-right: 30px;
+}
+
+.navbar-inverse {
+    margin-bottom: 0;
+}
+
+.border {
+    border: 1px solid #b6d8b6;
+    margin-right: 10px;
+    padding: 8px;
+}
+.mr-l15{
+    margin-left: 15px;
+}
+.display-flex {
+    display: flex;
+}
+
+.display-flex div[flex] {
+    flex-basis: 50%;
+}
+
+div[ng-view] {
+    background: honeydew;
 }
