--- a/WebContent/modules/Slots/Views/slots-view.html
+++ b/WebContent/modules/Slots/Views/slots-view.html
@@ -24,7 +24,7 @@
         <form ng-submit="registerCar(registrationCriteria,$event)">
             <div class="form-group">
                 <label>Enter Reg.No</label>
-                <input type="text" class="form-control" ng-model="registrationCriteria.regno" required />
+                <input type="text" class="form-control" ng-change="registrationCriteria.regno = (registrationCriteria.regno | uppercase)" ng-model="registrationCriteria.regno" required />
             </div>
             <div class="form-group">
                 <label>Enter Color</label>
@@ -67,7 +67,7 @@
                 <h4><b>Find Car</b></h4>
                 <div class="form-group">
                     <label>Enter Car Number to find:</label>
-                    <input type="text" class="form-control" placeholder="Enter Reg No" ng-model="findCarCriteria.regNum" required />
+                    <input type="text" class="form-control" placeholder="Enter Reg No" ng-model="findCarCriteria.regNum" ng-change="findCarCriteria.regNum = (findCarCriteria.regNum | uppercase)" required />
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary" />
