mock data serialized

--- a/WebContent/modules/styles/styles.css
+++ b/WebContent/modules/styles/styles.css
@@ -6,6 +6,11 @@ i.fa {
     cursor: pointer;
 }
 
+.cars-list-wrapper {
+    height: 500px;
+    overflow: auto;
+}
+
 .parking-slot-area .card .chip {
     display: inline-block;
     padding: 0 25px;
@@ -78,9 +83,11 @@ thead tr>th:last-child {
     margin-right: 10px;
     padding: 8px;
 }
-.mr-l15{
+
+.mr-l15 {
     margin-left: 15px;
 }
+
 .display-flex {
     display: flex;
 }
