--- a/WebContent/modules/Slots/Views/slots-view.html
+++ b/WebContent/modules/Slots/Views/slots-view.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h4 class="mr-l15">Total Cars Parked:</h4>
-    <div class="col-xs-6 col-sm-6 col-md-2 col-lg-3">
+    <div class="col-xs-6 col-sm-6 col-md-2 col-lg-3 cars-list-wrapper">
         <div class="parking-slot-area" ng-repeat="car in ui.cars track by $index">
             <div class="card">
                 <div class="chip" ng-if="car.regno!==null && car.slot!==null">
