--- a/WebContent/modules/Slots/Views/slots-view.html
+++ b/WebContent/modules/Slots/Views/slots-view.html
@@ -1,9 +1,10 @@
 <div class="container">
-    <h4 class="mr-l15">Total Cars Parked:</h4>
+    <h4 class="mr-l15">Cars in slots</h4>
     <div class="col-xs-6 col-sm-6 col-md-2 col-lg-3 cars-list-wrapper">
         <div class="parking-slot-area" ng-repeat="car in ui.cars track by $index">
             <div class="card">
                 <div class="chip" ng-if="car.regno!==null && car.slot!==null">
+                    <b style="color: #FFF">{{$index+1}}</b>
                     <i class="fa fa-car" ng-style="{'color':car.color}"></i>
                     <b>{{car.regno}}</b>
                     <i class="fa fa-window-close" ng-click="depart(ui.cars,$index)" style="color: #FFF"></i>
